[package]
name = "chip8emu_rs"
version = "0.1.0"
authors = ["Adrian Stein <adrian.stein@tum.de>"]
edition = "2018"
description = "Chip8 emulator"
license = "MIT"
repository = "https://github.com/DasStone/chip8emu_rs"
keywords = ["chip8", "emulator", "emulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
sdl2 = "0.35.2"
clap = "2.33.3"
